--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uploadthing/react": "^7.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -42,6 +43,7 @@
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.3.0",
     "vaul": "^1.1.1",
     "zod": "^3.23.3"
   },
