--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.3",
+    "nextjs-toploader": "^3.7.15",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
