--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.3.0",
+    "use-debounce": "^10.0.4",
     "vaul": "^1.1.1",
     "zod": "^3.23.3"
   },
